--- a/README
+++ b/README
@@ -8,3 +8,5 @@ Then, mash the keyboard to complete your hack.
 Once it is completed, push the Submit Hack button and receive Hacker Cred. The more hacker cred you have, the more ads you can serve, which gain you money each time you create a new hack.
 
 If the caffeine meter gets below certain points, bad things happen. Ingesting too much caffeine is also bad for you.
+
+Recruiters may email you shitty form letters trying to get you to work for them. Turn them down while keeping up with your hack.
